[gd_scene load_steps=32 format=3 uid="uid://dlaoxsh4nrl4r"]

[ext_resource type="Script" path="res://singletons/singleton_holder.gd" id="1_4ae2a"]
[ext_resource type="Script" path="res://singletons/misc_tools.gd" id="1_ji376"]
[ext_resource type="PackedScene" uid="uid://cahtc4x8m4wr6" path="res://player/player.tscn" id="2_o61aj"]
[ext_resource type="Script" path="res://singletons/deck_tools.gd" id="2_ups0p"]
[ext_resource type="Script" path="res://singletons/rules_config.gd" id="3_ktrit"]
[ext_resource type="Script" path="res://singletons/input_handler.gd" id="5_0x11e"]
[ext_resource type="Script" path="res://singletons/npc_encounter_sprite_scenes.gd" id="6_hlet4"]
[ext_resource type="PackedScene" uid="uid://dy8f6hge3lmt7" path="res://encounters/npc_sprites/marcie_encounter_sprite.tscn" id="7_qgeg1"]
[ext_resource type="Script" path="res://singletons/progression_manager.gd" id="8_nwdj1"]
[ext_resource type="Script" path="res://singletons/game_settings.gd" id="9_jnmea"]
[ext_resource type="PackedScene" uid="uid://juusc1s731ic" path="res://encounters/npc_sprites/gretchen_encounter_sprite.tscn" id="9_rx8br"]
[ext_resource type="PackedScene" uid="uid://g558chvughdr" path="res://encounters/npc_sprites/tammy_encounter_sprite.tscn" id="10_8tbmm"]
[ext_resource type="Script" path="res://singletons/encounter_events.gd" id="10_gkav3"]
[ext_resource type="Script" path="res://audio/footstep_player.gd" id="11_2qhi3"]
[ext_resource type="PackedScene" uid="uid://dg70blfjl62uw" path="res://encounters/npc_sprites/kaci_encounter_sprite.tscn" id="11_jbocf"]
[ext_resource type="PackedScene" uid="uid://kqq5weo8i710" path="res://encounters/npc_sprites/dana_encounter_sprite.tscn" id="12_hkn2e"]
[ext_resource type="Script" path="res://singletons/ui_sound_manager.gd" id="12_xm623"]
[ext_resource type="AudioStream" uid="uid://c1l4704riw5jy" path="res://audio/assets/ui/GUI_Cancel_7.wav" id="13_es2g3"]
[ext_resource type="PackedScene" uid="uid://detffcfr633o3" path="res://encounters/npc_sprites/heather_encounter_sprite.tscn" id="13_kmwt3"]
[ext_resource type="AudioStream" uid="uid://b88pdad0a4lbl" path="res://audio/assets/ui/GUI_Cancel_4.wav" id="13_psm8y"]
[ext_resource type="Script" path="res://singletons/encounter_sound_manager.gd" id="15_dnmvw"]
[ext_resource type="AudioStream" uid="uid://b3yleeglgjs41" path="res://audio/assets/ui/GUI_Scroll_Short_11.wav" id="15_eb3nk"]
[ext_resource type="AudioStream" uid="uid://be50paww2jfnk" path="res://audio/assets/encounter/slap.wav" id="16_0082g"]
[ext_resource type="Script" path="res://singletons/music_manager.gd" id="19_2q3lk"]
[ext_resource type="Script" path="res://singletons/cross_fader.gd" id="21_ju0ja"]
[ext_resource type="AudioStream" uid="uid://63xy6m8tepjd" path="res://audio/assets/music/final prototype wavs/mp3/bbb overworld.mp3" id="25_7fsm3"]
[ext_resource type="Script" path="res://singletons/dialogue_states.gd" id="25_mp0t5"]
[ext_resource type="AudioStream" uid="uid://b51n0bivxcn15" path="res://audio/assets/music/final prototype wavs/mp3/bbb overworld 2.mp3" id="26_ffstl"]
[ext_resource type="Script" path="res://singletons/help_manager.gd" id="26_myuyd"]
[ext_resource type="AudioStream" uid="uid://qvp8deu7mwu8" path="res://audio/assets/music/final prototype wavs/mp3/bbb battle music.mp3" id="27_0t65a"]
[ext_resource type="AudioStream" uid="uid://dnds1q3vavh4y" path="res://audio/assets/music/final prototype wavs/mp3/bbb title theme.mp3" id="28_i8dvi"]

[node name="SingletonHolder" type="Node"]
script = ExtResource("1_4ae2a")

[node name="MiscTools" type="Node" parent="."]
script = ExtResource("1_ji376")
player_scene = ExtResource("2_o61aj")

[node name="DeckTools" type="Node" parent="."]
script = ExtResource("2_ups0p")

[node name="RulesConfig" type="Node" parent="."]
script = ExtResource("3_ktrit")

[node name="InputHandler" type="Node" parent="."]
script = ExtResource("5_0x11e")

[node name="NpcEncounterSpriteScenes" type="Node" parent="."]
script = ExtResource("6_hlet4")
npc_encounter_sprite_scenes = Array[PackedScene]([ExtResource("7_qgeg1"), ExtResource("9_rx8br"), ExtResource("10_8tbmm"), ExtResource("11_jbocf"), ExtResource("12_hkn2e"), ExtResource("13_kmwt3")])

[node name="ProgressionManager" type="Node" parent="."]
script = ExtResource("8_nwdj1")
xp_win_against_lower = 35

[node name="GameSettings" type="Node" parent="."]
script = ExtResource("9_jnmea")
best_of_n = 5

[node name="EncounterEvents" type="Node" parent="."]
script = ExtResource("10_gkav3")

[node name="FootstepPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("11_2qhi3")

[node name="UiSoundManager" type="Node" parent="."]
script = ExtResource("12_xm623")

[node name="AudioStreamPlayers" type="Node" parent="UiSoundManager"]

[node name="CardHover" type="AudioStreamPlayer" parent="UiSoundManager/AudioStreamPlayers"]
stream = ExtResource("13_es2g3")
bus = &"UISounds"

[node name="CardSelect" type="AudioStreamPlayer" parent="UiSoundManager/AudioStreamPlayers"]
stream = ExtResource("13_psm8y")
bus = &"UISounds"

[node name="SlideSound" type="AudioStreamPlayer" parent="UiSoundManager/AudioStreamPlayers"]
stream = ExtResource("15_eb3nk")

[node name="EncounterSoundManager" type="Node" parent="."]
script = ExtResource("15_dnmvw")

[node name="AudioStreamPlayers" type="Node" parent="EncounterSoundManager"]

[node name="SlapSound" type="AudioStreamPlayer" parent="EncounterSoundManager/AudioStreamPlayers"]
stream = ExtResource("16_0082g")

[node name="MusicManager" type="Node" parent="."]
script = ExtResource("19_2q3lk")

[node name="AudioStreamPlayers" type="Node" parent="MusicManager"]

[node name="overworld_outdoor_theme" type="AudioStreamPlayer" parent="MusicManager/AudioStreamPlayers"]
stream = ExtResource("25_7fsm3")
bus = &"OutdoorMusic"

[node name="overworld_indoor_theme" type="AudioStreamPlayer" parent="MusicManager/AudioStreamPlayers"]
stream = ExtResource("26_ffstl")
bus = &"IndoorMusic"

[node name="encounter_theme" type="AudioStreamPlayer" parent="MusicManager/AudioStreamPlayers"]
stream = ExtResource("27_0t65a")
bus = &"BattleMusic"

[node name="start_menu_theme" type="AudioStreamPlayer" parent="MusicManager/AudioStreamPlayers"]
stream = ExtResource("28_i8dvi")
bus = &"StartMenuMusic"

[node name="CrossFader" type="Node" parent="MusicManager"]
script = ExtResource("21_ju0ja")

[node name="DialogueStates" type="Node" parent="."]
script = ExtResource("25_mp0t5")

[node name="HelpManager" type="Node" parent="."]
script = ExtResource("26_myuyd")
